<resources>
    <string name="app_name">AndroidQuiz</string>
    <string name="start_hard">Start (Hard)</string>
    <string name="start_easy">Start (Easy)</string>
    <string name="total_score_0">Total Score: 0</string>
    <string name="space_quiz_image">Space Quiz Image</string>
    <string name="question_1">Question 1</string>
    <string name="question_title">Question Title</string>
    <string name="choice1">Choice1</string>
    <string name="choice2">Choice2</string>
    <string name="choice3">Choice3</string>
    <string name="choice4">Choice4</string>
    <string name="results">RESULTS</string>
    <string name="_3_5">3 / 5</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="menuback">Return</string>
    <string name="authorise">Authorise</string>
</resources>
